# azure-sdk-for-rust

sdk/cosmos/azure_data_cosmos_java/: pom.xml
sdk/cosmos/azure_data_cosmos_java/native/: build.rs
sdk/cosmos/azure_data_cosmos_java/native/src/: ffi.rs
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/: CosmosClient.java  CosmosException.java  CosmosNativeBridge.java  CosmosReactiveClient.java  NativeLoader.java
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/bench/: FfiBenchmark.java
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/jna/: CosmosJnaClient.java  CosmosJnaReactiveClient.java  CosmosLibrary.java
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/jni/: CosmosJniClient.java  CosmosJniReactiveClient.java
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/models/: CosmosItemResponse.java
sdk/cosmos/azure_data_cosmos_java/src/main/java/com/azure/cosmos/strategy/: CosmosClientStrategy.java  CosmosReactiveStrategy.java
sdk/cosmos/azure_data_cosmos_jni/: Cargo.toml
sdk/cosmos/azure_data_cosmos_jni/src/: lib.rs
